Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/5073060/Neg.out
Neg.java:10:23: compiler.err.not.def.public.cant.access: foo(), test.NegHelper
1 error
